sg.yml
---
AWSTemplateFormatVersion: 2010-09-09
Description: "Creating Security Groups for EC2 and RDS communication for Apache Ranger setup"

Parameters:
  VpcId:
    Default: '/CNS/resources/vpc_id'
    Type: 'AWS::SSM::Parameter::Value<String>'
    Description: "VPC ID of your existing Virtual Private Cloud (VPC)"
    ConstraintDescription: "Must be the VPC ID of an existing Virtual Private Cloud"

Resources:
  ApacheRangerEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for Apache Ranger EC2 server"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - Description: "All inbound to port 6080 for Ranger Admin web UI console over http"
          IpProtocol: tcp
          FromPort: '6080'
          ToPort: '6080'
          CidrIp: 10.0.0.0/8
        - Description: "All inbound to port 6182 for Ranger Admin web UI console over https"
          IpProtocol: tcp
          FromPort: '6182'
          ToPort: '6182'
          CidrIp: 10.0.0.0/8
        - Description: "All inbound to port 8983 for Solr web UI console over http"
          IpProtocol: tcp
          FromPort: '8983'
          ToPort: '8983'
          CidrIp: 10.0.0.0/8
        - Description: "All inbound to port 8984 for Solr web UI console over http"
          IpProtocol: tcp
          FromPort: '8984'
          ToPort: '8984'
          CidrIp: 10.0.0.0/8

  ApacheRangerRDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for RDS - MySQL instance"
      VpcId: !Ref VpcId

  ApacheRangerEC2SecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      Description: "Allow outbound from Apache Ranger EC2 security group to MySQL RDS 3306 port"
      GroupId: !GetAtt ApacheRangerEC2SecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      DestinationSecurityGroupId: !GetAtt ApacheRangerRDSSecurityGroup.GroupId

  ApacheRangerRDSSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: "Allow inbound to MySQL RDS 3306 port from Apache Ranger EC2 security group"
      GroupId: !GetAtt ApacheRangerRDSSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: 3306
      ToPort: 3306
      SourceSecurityGroupId: !GetAtt ApacheRangerEC2SecurityGroup.GroupId

Outputs:
  ApacheRangerEC2SecurityGroupID:
    Description: ApacheRangerEC2SecurityGroup group security GroupId
    Value: !GetAtt ApacheRangerEC2SecurityGroup.GroupId

  ApacheRangerEC2SecurityVPCID:
    Description: ApacheRangerEC2SecurityGroup VPC ID
    Value: !GetAtt ApacheRangerEC2SecurityGroup.VpcId

  ApacheRangerRDSSecurityGroupID:
    Description: ApacheRangerRDSSecurityGroup group security GroupId
    Value: !GetAtt ApacheRangerRDSSecurityGroup.GroupId

  ApacheRangerRDSSecurityVPCID:
    Description: ApacheRangerRDSSecurityGroup VPC ID
    Value: !GetAtt ApacheRangerRDSSecurityGroup.VpcId
